--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		classpath "org.springframework.cloud:spring-cloud-contract-gradle-plugin:2.0.1.RELEASE"
 	}
 }
 
@@ -18,6 +19,7 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'spring-cloud-contract'
 
 group = 'co.hodler'
 version = '0.0.1-SNAPSHOT'
@@ -35,6 +37,10 @@ compileTestKotlin {
 	}
 }
 
+ext {
+	springCloudVersion = 'Finchley.SR1'
+}
+
 repositories {
 	mavenCentral()
 }
@@ -43,15 +49,30 @@ test {
 	useJUnitPlatform()
 	testLogging {
 		events "passed", "skipped", "failed"
+		exceptionFormat "full"
 	}
 }
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter')
+	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
 	testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
 	testCompile("org.junit.jupiter:junit-jupiter-params:5.2.0")
 	testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
+    testRuntime("org.junit.vintage:junit-vintage-engine:5.2.0")
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('org.springframework.cloud:spring-cloud-starter-contract-verifier')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "org.springframework.cloud:spring-cloud-contract-dependencies:2.0.1.RELEASE"
+	}
+}
+
+contracts {
+	baseClassForTests = 'co.hodler.hang.HangBase'
 }
